[profile.release-lto]
inherits = "release"
lto = true

[profile.dev-dbg]
inherits = "release"
debug = true

[package]
name = "kno3"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { git = "https://github.com/a-underscore/hex", version = "0.1.0" }
hex_instance = { git = "https://github.com/a-underscore/hex_instance", version = "0.1.0" }
hex_physics = { git = "https://github.com/a-underscore/hex_physics", version = "0.1.0" }
hex_ui = { git = "https://github.com/a-underscore/hex_ui", version = "0.1.0" }
image = "0.24.5"
rand = "0.8.5"
rayon = "1.6.1"
