[profile.release-lto]
inherits = "release"
lto = true

[profile.dev-dbg]
inherits = "release"
debug = true

[package]
name = "paraselene"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { git = "https://github.com/a-underscore/hex", branch = "0.2.0" }
hex_instance = { git = "https://github.com/a-underscore/hex_instance", branch = "0.2.0" }
hex_physics = { git = "https://github.com/a-underscore/hex_physics", branch = "0.2.0" }
hex_ui = { git = "https://github.com/a-underscore/hex_ui", branch = "0.2.0" }
image = "0.24.5"
noise = "0.8.2"
once_cell = "1.18.0"
rand = "0.8.5"
rayon = "1.6.1"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
